# AdoptABot

./: .gitignore  README.md  pyproject.toml
adoptabot/: bot-ds.py  bot-ext.py  bot.py
adoptabot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adoptabot/extensions/: basic.py  event.py  voice.py
adoptabot/utils/: registry.py  utils.py
res/: membs.json  registry.json
tests/: test_adoptabot.py
