[tool.poetry]
name = "AdoptABot"
version = "0.1.0"
description = "A bot for the 2020 edition of Adopt a Skill"
authors = ["AtomicNicos <nicolas.boeckh@etu.unige.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
python-dotenv = "^0.14.0"
PyYAML = "^5.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
